objects/ssot__SocialContributionSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CategoryName__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContribOrganizationName__c</fullName>
        <label>Contributing Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriodId__c</fullName>
        <label>Disclosure Reporting Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Social Contribution Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NonMonetaryCtrbNumber__c</fullName>
        <label>Non Monetary Contribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NonMonetaryCtrbType__c</fullName>
        <label>Non Monetary Contribution Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientName__c</fullName>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SocialContributionTypeCode__c</fullName>
        <label>Social Contribution Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccountId__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383688441_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SocialContributionSummary_Subsidiary_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>SocialContributionSummary_Subsidiary_rel</relationshipLabel>
        <relationshipName>rel_1747383688441_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383691611_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SocialContributionSummary_DisclsRepo_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>SocialContributionSummary_DisclsRepo_rel</relationshipLabel>
        <relationshipName>rel_1747383691611_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>